@@ -2,6 +2,7 @@ build
 .DS_Store
 *config.json
 media.*.priv*
+docker/data
 
 # Binaries for programs and plugins
 *.exe
