@@ -1,5 +1,5 @@
 .PHONY: build test run docker-run docker-build
-
+SHELL := /bin/bash
 build: 
 	cd cmd && go build -o ../build/server
 
@@ -16,7 +16,7 @@ docker-build:
 	docker buildx build --load --tag plex-webhook-automation-local .
 docker-push:
 	docker buildx build --push --platform linux/amd64 --tag ghcr.io/iloveicedgreentea/plex-webhook-automation:test . 
-docker-run: docker-build
-	docker run -p 9999:9999 -e LOG_LEVEL=debug plex-webhook-automation-local
+docker-run:
+	docker run -p 9999:9999 -e LOG_LEVEL=debug -v $(shell pwd)/docker/data:/data plex-webhook-automation-local
 run: build
-	LOG_LEVEL=debug ./build/server
+	LOG_FILE=false LOG_LEVEL=debug ./build/server
